--- a/CMusicPlayer/CMusicPlayer.csproj
+++ b/CMusicPlayer/CMusicPlayer.csproj
@@ -7,6 +7,7 @@
     <LangVersion>preview</LangVersion>
     <Nullable>enable</Nullable>
     <ApplicationIcon>AppIcon.ico</ApplicationIcon>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
